--- a/index.html
+++ b/index.html
@@ -103,57 +103,136 @@
     </section>
 
     <!-- Services and prices -->
-    <section class="section services-prices">
-      <div class="container">
-        <div class="up-block">
-          <svg
-            class="line"
-            width="60"
-            height="0"
-            style="outline: 1px solid rgba(157, 164, 189, 0.6)"
-          >
-            <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
-          </svg>
-        </div>
-        <p class="uppertitle-dark">spend your time with the best masters</p>
-        <h2 class="title-light">Services and prices</h2>
-        <div class="group">
-          <ul class="list services">
-            <li class="service">Men’s haircut</li>
-            <li class="service">Beard trim</li>
-            <li class="service">Mustache trim</li>
-            <li class="service">Straight razor shave</li>
-          </ul>
-          <ul class="list prices">
-            <li class="price">from 300 uah.</li>
-            <li class="price">from 300 uah.</li>
-            <li class="price">from 200 uah.</li>
-            <li class="price">from 200 uah.</li>
-          </ul>
-        </div>
-        <div class="group">
-          <ul class="list services">
-            <li class="service">Trainee’s haircut</li>
-            <li class="service">Haircut under the nozzle</li>
-            <li class="service">Children’s haircut (0-12 y.o.)</li>
-            <li class="service">Camouflage of gray hair</li>
-          </ul>
-          <ul class="list prices">
-            <li class="price">from 50 uah.</li>
-            <li class="price">from 200 uah.</li>
-            <li class="price">from 300 uah.</li>
-            <li class="price">from 200 uah.</li>
-          </ul>
+
+    <div class="serv-img">
+      <section class="section services-prices">
+        <div class="container">
+          <div class="up-block">
+            <svg
+              class="line"
+              width="60"
+              height="0"
+              style="outline: 1px solid rgba(157, 164, 189, 0.6)"
+            >
+              <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+            </svg>
+
+            <p class="uppertitle-dark">spend your time with the best masters</p>
+          </div>
+          <h2 class="title-light">Services and prices</h2>
+          <div class="price">
+            <ul class="left-list">
+              <li class="service">
+                <p class="left">Men’s haircut</p>
+                <svg
+                  class="line2"
+                  width="215"
+                  height="0"
+                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
+                >
+                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
+                </svg>
+                <p class="right">from 300 uah.</p>
+              </li>
+              <li class="service">
+                <p class="left">Beard trim</p>
+                <svg
+                  class="line2"
+                  width="240"
+                  height="0"
+                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
+                >
+                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
+                </svg>
+                <p class="right">from 300 uah.</p>
+              </li>
+              <li class="service">
+                <p class="left">Mustache trim</p>
+                <svg
+                  class="line2"
+                  width="205"
+                  height="0"
+                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
+                >
+                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
+                </svg>
+                <p class="right">from 200 uah.</p>
+              </li>
+              <li class="service">
+                <p class="left">Straight razor shave</p>
+                <svg
+                  class="line2"
+                  width="155"
+                  height="0"
+                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
+                >
+                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
+                </svg>
+                <p class="right">from 200 uah.</p>
+              </li>
+            </ul>
+
+            <ul class="right-list">
+              <li class="service">
+                <p class="left">Trainee’s haircut</p>
+                <svg
+                  class="line2"
+                  width="220"
+                  height="0"
+                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
+                >
+                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
+                </svg>
+                <p class="right">from 50 uah.</p>
+              </li>
+              <li class="service">
+                <p class="left">Haircut under the nozzle</p>
+                <svg
+                  class="line2"
+                  width="150"
+                  height="0"
+                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
+                >
+                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
+                </svg>
+                <p class="right">from 200 uah.</p>
+              </li>
+              <li class="service">
+                <p class="left">Children’s haircut (0-12 y.o.)</p>
+                <svg
+                  class="line2"
+                  width="120"
+                  height="0"
+                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
+                >
+                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
+                </svg>
+                <p class="right">from 300 uah.</p>
+              </li>
+              <li class="service">
+                <p class="left">Camouflage of gray hair</p>
+                <svg
+                  class="line2"
+                  width="155"
+                  height="0"
+                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
+                >
+                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
+                </svg>
+                <p class="right">from 200 uah.</p>
+              </li>
+            </ul>
+          </div>
         </div>
         <button class="btn-light" type="button">ONLINE-BOOKING</button>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <!-- Benefits -->
     <section class="section">
-      <div class="container">
-        <div class="group">
-          <ul class="list">
+      <div class="container benefits">
+        <div class="infograf">
+          <ul class="list number">
             <p class="benefit">
               <span class="benefits-number"
                 >600<sup><span class="sup">&#43;</span></sup></span
@@ -176,14 +255,17 @@
             </p>
           </ul>
         </div>
-        <div class="group">
+        <div class="old-school">
           <div class="up-block">
             <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
               <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
             </svg>
             <p class="uppertitle">old traditional school</p>
           </div>
-          <h2 class="title-dark">Why people come to us?</h2>
+          <h2 class="title-dark">
+            Why people come <br />
+            to us?
+          </h2>
           <p class="subtitle">
             Only good things are said about us. But it's better to see and feel 1 time than read 10
             times.
