--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <!-- Hero and Header -->
-    <section class="section">
+    <section>
       <div class="container">
         <header class="header">
           <a class="logo" href=""><img src="./image/Logo.svg" alt="Logo" /></a>
@@ -72,7 +72,7 @@
     </section>
 
     <!-- About -->
-    <section class="section">
+    <section>
       <div class="container">
         <div class="about-photo">
           <ul class="list about">
@@ -105,7 +105,7 @@
     <!-- Services and prices -->
 
     <div class="serv-img">
-      <section class="section services-prices">
+      <section class="services-prices">
         <div class="container">
           <div class="up-block">
             <svg
@@ -222,39 +222,48 @@
                 <p class="right">from 200 uah.</p>
               </li>
             </ul>
-            
           </div>
           <button class="btn-light" type="button">ONLINE-BOOKING</button>
         </div>
-        
       </section>
     </div>
 
     <!-- Benefits -->
-    <section class="section">
+    <section>
       <div class="container benefits">
         <div class="infograf">
           <ul class="list number">
-            <p class="benefit">
-              <span class="benefits-number"
-                >600<sup><span class="sup">&#43;</span></sup></span
-              ><br /><span class="benefits-item">Satisfied customers per day</span>
-            </p>
-            <p class="benefit">
-              <span class="benefits-number"
-                >50<sup><span class="sup">&#43;</span></sup></span
-              ><br /><span class="benefits-item">Awards for excellent service</span>
-            </p>
-            <p class="benefit">
-              <span class="benefits-number"
-                >20<sup><span class="sup">&#43;</span></sup></span
-              ><br /><span class="benefits-item">Kyiv’s best barbers</span>
-            </p>
-            <p class="benefit">
-              <span class="benefits-number"
-                >100<sup><span class="sup">&#43;</span></sup></span
-              ><br /><span class="benefits-item">Gifts for regular customers</span>
-            </p>
+            <li class="benefit">
+              <p>
+                <span class="benefits-number"
+                  >600<sup><span class="sup">&#43;</span></sup></span
+                ><br /><span class="benefits-item">Satisfied customers per day</span>
+              </p>
+            </li>
+
+            <li class="benefit">
+              <p>
+                <span class="benefits-number"
+                  >50<sup><span class="sup">&#43;</span></sup></span
+                ><br /><span class="benefits-item">Awards for excellent service</span>
+              </p>
+            </li>
+
+            <li class="benefit">
+              <p>
+                <span class="benefits-number"
+                  >20<sup><span class="sup">&#43;</span></sup></span
+                ><br /><span class="benefits-item">Kyiv’s best barbers</span>
+              </p>
+            </li>
+
+            <li class="benefit">
+              <p>
+                <span class="benefits-number"
+                  >100<sup><span class="sup">&#43;</span></sup></span
+                ><br /><span class="benefits-item">Gifts for regular customers</span>
+              </p>
+            </li>
           </ul>
         </div>
         <div class="old-school">
@@ -277,7 +286,7 @@
     </section>
 
     <!-- Our barbers -->
-    <section class="section our-barbers">
+    <section class="our-barbers">
       <div class="container">
         <div class="up-block">
           <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
@@ -387,7 +396,7 @@
     </section>
 
     <!-- Gallery -->
-    <section class="section">
+    <section>
       <div class="container">
         <div class="up-block">
           <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
@@ -416,7 +425,7 @@
     <!-- contacts -->
     <div class="double-section">
       <div class="container double">
-        <section class="section form-cont" id="contacts">
+        <section class="form-cont" id="contacts">
           <div class="form">
             <h2 class="title-light">Online-booking</h2>
 
@@ -451,7 +460,7 @@
               </svg>
               <p class="hours-title">working hours</p>
             </div>
-            <p class="contact">Every day from <time>9:00</time> to <time>22:00</time></p>
+            <p class="contact">Every day from <time>09:00</time> to <time>22:00</time></p>
           </div>
         </section>
       </div>
