--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body class="page">
     <!-- Hero and Header -->
-    <section>
-      <div class="container">
+    <section class="top-bg">
+      <div class="container bg-img">
         <header class="header">
           <a class="logo" href=""><img src="./image/Logo.svg" alt="Logo" /></a>
-          <nav class="nav">
-            <ul class="list">
+          <nav class="">
+            <ul class="nav">
               <li class="list-item"><a class="header-link" href="">About</a></li>
               <li class="list-item"><a class="header-link" href="">Services and prices</a></li>
               <li class="list-item"><a class="header-link" href="">Barbers</a></li>
               <li class="list-item"><a class="header-link" href="#contacts">Contacts</a></li>
             </ul>
           </nav>
-          <div class="header-group">
-            <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
-            <button class="btn-light" type="button">ONLINE-BOOKING</button>
-          </div>
+
+          <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
+          <button class="btn-light head" type="button">ONLINE-BOOKING</button>
         </header>
         <div class="group">
           <ul class="link-list">
@@ -73,7 +73,7 @@
 
     <!-- About -->
     <section>
-      <div class="container">
+      <div class="container cont-ab">
         <div class="about-photo">
           <ul class="list about">
             <li class="list-item"><img src="./image/about/about1.jpg" alt="Front shave" /></li>
@@ -429,11 +429,11 @@
           <div class="form">
             <h2 class="title-light">Online-booking</h2>
 
-            <button class="btn-light" type="button">send</button>
+            <button class="btn-light-down" type="button">send</button>
           </div>
         </section>
-        <section>
-          <div class="contacts">
+        <section class="contacts">
+          <div>
             <h2 class="title-light">Contacts</h2>
             <address class="contacts-adress">
               <ul class="contact-list">
