--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
   </head>
 
   <body class="page">
+
     <!-- Hero and Header -->
-    <section class="top-bg">
-      <div class="container bg-img">
+
+
+    <section>
+      <div class="container">
+        <div class="bg-img">
         <header class="header">
-          <a class="logo" href=""><img src="./image/Logo.svg" alt="Logo" /></a>
+          <a class="" href="index.html">
+            <svg class="logo">
+                <use href="./image/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
           <nav class="">
             <ul class="nav">
               <li class="list-item"><a class="header-link" href="">About</a></li>
@@ -36,7 +44,7 @@
           <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
           <button class="btn-light head" type="button">ONLINE-BOOKING</button>
         </header>
-        <div class="group">
+        <div class="left-group">
           <ul class="link-list">
             <li class="list-item">
               <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
@@ -50,6 +58,7 @@
             </li>
           </ul>
         </div>
+        
         <div class="hero-content">
           <p class="uppertitle-dark">A hair salon for men in Kyiv</p>
           <h1 class="hero-title">BarberShop</h1>
@@ -58,7 +67,7 @@
             We work quickly, carefully and with style.
           </p>
         </div>
-        <div>
+        <div class="down-group">
           <ul class="list">
             <li class="list-item">
               <button class="btn-slider" type="button">Back</button>
@@ -69,10 +78,11 @@
           </ul>
         </div>
       </div>
+      </div>
     </section>
 
     <!-- About -->
-    <section>
+    <section class="section">
       <div class="container cont-ab">
         <div class="about-photo">
           <ul class="list about">
