--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 
     <section>
-      <div class="container">
-        <div class="bg-img">
-        <header class="header">
-          <a class="" href="index.html">
+      <div class="container hero">
+        <div class="bg-img"></div>
+        <a class="" href="index.html">
             <svg class="logo">
                 <use href="./image/icons.svg#icon-logo"></use>
             </svg>
           </a>
+        <header class="header">          
           <nav class="">
             <ul class="nav">
               <li class="list-item"><a class="header-link" href="">About</a></li>
@@ -40,12 +40,11 @@
               <li class="list-item"><a class="header-link" href="#contacts">Contacts</a></li>
             </ul>
           </nav>
-
           <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
           <button class="btn-light head" type="button">ONLINE-BOOKING</button>
         </header>
         <div class="left-group">
-          <ul class="link-list">
+          <ul class="link-list left">
             <li class="list-item">
               <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
                 >Instagram</a
@@ -57,8 +56,7 @@
               >
             </li>
           </ul>
-        </div>
-        
+        </div>        
         <div class="hero-content">
           <p class="uppertitle-dark">A hair salon for men in Kyiv</p>
           <h1 class="hero-title">BarberShop</h1>
@@ -70,14 +68,13 @@
         <div class="down-group">
           <ul class="list">
             <li class="list-item">
-              <button class="btn-slider" type="button">Back</button>
+              <button class="btn-slider back" type="button">Back</button>
             </li>
             <li class="list-item">
-              <button class="btn-slider" type="button">Forward</button>
+              <button class="btn-slider forward" type="button">Forward</button>
             </li>
           </ul>
-        </div>
-      </div>
+        </div>      
       </div>
     </section>
 
@@ -91,12 +88,7 @@
           </ul>
         </div>
         <div class="info-block">
-          <div class="up-block">
-            <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
-              <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
-            </svg>
-            <p class="uppertitle">ABOUT</p>
-          </div>
+          <p class="uppertitle">ABOUT</p>
           <h2 class="title-dark">Best Barbershop in your city</h2>
           <p class="subtitle">
             If you want to add more confidence to your image, you should definitely visit us.
@@ -115,7 +107,7 @@
     <!-- Services and prices -->
 
     <div class="serv-img">
-      <section class="services-prices">
+      <section class="section services-prices">
         <div class="container">
           <div class="up-block">
             <svg
@@ -239,7 +231,7 @@
     </div>
 
     <!-- Benefits -->
-    <section>
+    <section class="section">
       <div class="container benefits">
         <div class="infograf">
           <ul class="list number">
@@ -296,7 +288,7 @@
     </section>
 
     <!-- Our barbers -->
-    <section class="our-barbers">
+    <section class="our-barbers section">
       <div class="container">
         <div class="up-block">
           <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
@@ -406,7 +398,7 @@
     </section>
 
     <!-- Gallery -->
-    <section>
+    <section  class="section">
       <div class="container">
         <div class="up-block">
           <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
