--- a/index.html
+++ b/index.html
@@ -106,111 +106,39 @@
 
     <!-- Services and prices -->
 
-    <div class="serv-img">
+    <div class="serv-img">          
       <section class="section services-prices">
         <div class="container">                 
           <p class="uppertitle-dark">spend your time with the best masters</p>          
           <h2 class="title-light">Services and prices</h2>
-          <div class="price">
+          <div class="prices">
             <ul class="left-list">
               <li class="service">
-                <p class="left">Men’s haircut</p>
-                <svg
-                  class="line2"
-                  width="215"
-                  height="0"
-                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
-                >
-                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
-                </svg>
-                <p class="right">from 300 uah.</p>
+                <span class="price">Men’s haircut</span><span>from 300 uah.</span>
               </li>
               <li class="service">
-                <p class="left">Beard trim</p>
-                <svg
-                  class="line2"
-                  width="240"
-                  height="0"
-                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
-                >
-                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
-                </svg>
-                <p class="right">from 300 uah.</p>
+                <span class="price">Beard trim</span><span>from 300 uah.</span>                
               </li>
               <li class="service">
-                <p class="left">Mustache trim</p>
-                <svg
-                  class="line2"
-                  width="205"
-                  height="0"
-                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
-                >
-                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
-                </svg>
-                <p class="right">from 200 uah.</p>
+                <span class="price">Mustache trim</span><span>from 200 uah.</span>
               </li>
               <li class="service">
-                <p class="left">Straight razor shave</p>
-                <svg
-                  class="line2"
-                  width="155"
-                  height="0"
-                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
-                >
-                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
-                </svg>
-                <p class="right">from 200 uah.</p>
+                <span class="price">Straight razor shave</span><span>from 200 uah.</span>                
               </li>
             </ul>
 
             <ul class="right-list">
               <li class="service">
-                <p class="left">Trainee’s haircut</p>
-                <svg
-                  class="line2"
-                  width="220"
-                  height="0"
-                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
-                >
-                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
-                </svg>
-                <p class="right">from 50 uah.</p>
+                <span class="price">Trainee’s haircut</span><span>from 50 uah.</span>                
               </li>
               <li class="service">
-                <p class="left">Haircut under the nozzle</p>
-                <svg
-                  class="line2"
-                  width="150"
-                  height="0"
-                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
-                >
-                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
-                </svg>
-                <p class="right">from 200 uah.</p>
+                <span class="price">Haircut under the nozzle</span><span>from 200 uah.</span>                
               </li>
               <li class="service">
-                <p class="left">Children’s haircut (0-12 y.o.)</p>
-                <svg
-                  class="line2"
-                  width="120"
-                  height="0"
-                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
-                >
-                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
-                </svg>
-                <p class="right">from 300 uah.</p>
+                <span class="price">Children’s haircut (0-12 y.o.)</span><span>from 300 uah.</span>                
               </li>
               <li class="service">
-                <p class="left">Camouflage of gray hair</p>
-                <svg
-                  class="line2"
-                  width="155"
-                  height="0"
-                  style="outline: 1px solid rgba(157, 164, 189, 0.12)"
-                >
-                  <line x1="0" y1="0" x2="0" y2="0" stroke="#9DA4BD" stroke-width="1" />
-                </svg>
-                <p class="right">from 200 uah.</p>
+                <span class="price">Camouflage of gray hair</span><span>from 200 uah.</span>                
               </li>
             </ul>
           </div>
@@ -257,13 +185,8 @@
             </li>
           </ul>
         </div>
-        <div class="old-school">
-          <div class="up-block">
-            <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
-              <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
-            </svg>
-            <p class="uppertitle">old traditional school</p>
-          </div>
+        <div class="old-school">         
+          <p class="uppertitle">old traditional school</p>          
           <h2 class="title-dark">
             Why people come <br />
             to us?
@@ -279,12 +202,7 @@
     <!-- Our barbers -->
     <section class="our-barbers section">
       <div class="container">
-        <div class="up-block">
-          <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
-            <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
-          </svg>
-          <p class="uppertitle">for true enjoyers of the atmosphere</p>
-        </div>
+        <p class="uppertitle">for true enjoyers of the atmosphere</p>        
         <h2 class="title-dark">Our barbers</h2>
 
         <ul class="list">
@@ -298,9 +216,11 @@
             <div class="social">
               <ul class="socials">
                 <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/social/instagram.svg" alt="Instagram"
-                  /></a>
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                    <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                  </a>
                 </li>
                 <li class="socials-item">
                   <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
