--- a/index.html
+++ b/index.html
@@ -19,19 +19,17 @@
   </head>
 
   <body class="page">
-
     <!-- Hero and Header -->
-
 
     <section>
       <div class="container hero">
         <div class="bg-img"></div>
         <a class="" href="index.html">
-            <svg class="logo">
-                <use href="./image/icons.svg#icon-logo"></use>
-            </svg>
-          </a>
-        <header class="header">          
+          <svg class="logo">
+            <use href="./image/icons.svg#icon-logo"></use>
+          </svg>
+        </a>
+        <header class="header">
           <nav class="">
             <ul class="nav">
               <li class="list-item"><a class="header-link" href="">About</a></li>
@@ -56,7 +54,7 @@
               >
             </li>
           </ul>
-        </div>        
+        </div>
         <div class="hero-content">
           <p class="uppertitle-dark">A hair salon for men in Kyiv</p>
           <h1 class="hero-title">BarberShop</h1>
@@ -74,7 +72,7 @@
               <button class="btn-slider forward" type="button">Forward</button>
             </li>
           </ul>
-        </div>      
+        </div>
       </div>
     </section>
 
@@ -106,10 +104,10 @@
 
     <!-- Services and prices -->
 
-    <div class="serv-img">          
+    <div class="serv-img">
       <section class="section services-prices">
-        <div class="container">                 
-          <p class="uppertitle-dark">spend your time with the best masters</p>          
+        <div class="container">
+          <p class="uppertitle-dark">spend your time with the best masters</p>
           <h2 class="title-light">Services and prices</h2>
           <div class="prices">
             <ul class="left-list">
@@ -117,28 +115,28 @@
                 <span class="price">Men’s haircut</span><span>from 300 uah.</span>
               </li>
               <li class="service">
-                <span class="price">Beard trim</span><span>from 300 uah.</span>                
+                <span class="price">Beard trim</span><span>from 300 uah.</span>
               </li>
               <li class="service">
                 <span class="price">Mustache trim</span><span>from 200 uah.</span>
               </li>
               <li class="service">
-                <span class="price">Straight razor shave</span><span>from 200 uah.</span>                
+                <span class="price">Straight razor shave</span><span>from 200 uah.</span>
               </li>
             </ul>
 
             <ul class="right-list">
               <li class="service">
-                <span class="price">Trainee’s haircut</span><span>from 50 uah.</span>                
+                <span class="price">Trainee’s haircut</span><span>from 50 uah.</span>
               </li>
               <li class="service">
-                <span class="price">Haircut under the nozzle</span><span>from 200 uah.</span>                
+                <span class="price">Haircut under the nozzle</span><span>from 200 uah.</span>
               </li>
               <li class="service">
-                <span class="price">Children’s haircut (0-12 y.o.)</span><span>from 300 uah.</span>                
+                <span class="price">Children’s haircut (0-12 y.o.)</span><span>from 300 uah.</span>
               </li>
               <li class="service">
-                <span class="price">Camouflage of gray hair</span><span>from 200 uah.</span>                
+                <span class="price">Camouflage of gray hair</span><span>from 200 uah.</span>
               </li>
             </ul>
           </div>
@@ -185,8 +183,8 @@
             </li>
           </ul>
         </div>
-        <div class="old-school">         
-          <p class="uppertitle">old traditional school</p>          
+        <div class="old-school">
+          <p class="uppertitle">old traditional school</p>
           <h2 class="title-dark">
             Why people come <br />
             to us?
@@ -202,7 +200,7 @@
     <!-- Our barbers -->
     <section class="our-barbers section">
       <div class="container">
-        <p class="uppertitle">for true enjoyers of the atmosphere</p>        
+        <p class="uppertitle">for true enjoyers of the atmosphere</p>
         <h2 class="title-dark">Our barbers</h2>
 
         <ul class="list">
@@ -213,32 +211,36 @@
               <p class="prof">Extreme Barber</p>
             </div>
 
-            <div class="social">
-              <ul class="socials">
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                    <svg class="icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                  </a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/social/twitter.svg" alt="Twitter"
-                  /></a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/social/facebook.svg" alt="Facebook"
-                  /></a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/social/linkedin.svg" alt="LinkedIn"
-                  /></a>
-                </li>
-              </ul>
-            </div>
+            <ul class="socials">
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
 
           <li class="barber-card">
@@ -250,24 +252,32 @@
 
             <ul class="socials">
               <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/instagram.svg" alt="Instagram"
-                /></a>
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
               <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/twitter.svg" alt="Twitter"
-                /></a>
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
               <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/facebook.svg" alt="Facebook"
-                /></a>
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
               <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
-                /></a>
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </li>
@@ -281,24 +291,32 @@
 
             <ul class="socials">
               <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/instagram.svg" alt="Instagram"
-                /></a>
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
               <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/twitter.svg" alt="Twitter"
-                /></a>
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
               <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/facebook.svg" alt="Facebook"
-                /></a>
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
               <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
-                /></a>
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="icon">
+                    <use href="./image/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </li>
@@ -307,14 +325,9 @@
     </section>
 
     <!-- Gallery -->
-    <section  class="section">
+    <section class="section">
       <div class="container">
-        <div class="up-block">
-          <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
-            <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
-          </svg>
-          <p class="uppertitle">in Latin, "barba" means "beard"</p>
-        </div>
+        <p class="uppertitle">in Latin, "barba" means "beard"</p>
         <h2 class="gallery-title">Gallery</h2>
         <ul class="list gallery">
           <li class="list-item">
@@ -335,16 +348,14 @@
 
     <!-- contacts -->
     <div class="double-section">
-      <div class="container double">
-        <section class="form-cont" id="contacts">
-          <div class="form">
+      <section>
+        <div class="container">
+          <div class="booking">
             <h2 class="title-light">Online-booking</h2>
-
+            <!-- form -->
             <button class="btn-light-down" type="button">send</button>
           </div>
-        </section>
-        <section class="contacts">
-          <div>
+          <div class="contacts">
             <h2 class="title-light">Contacts</h2>
             <address class="contacts-adress">
               <ul class="contact-list">
@@ -354,8 +365,9 @@
                     href="https://goo.gl/maps/r24npt5XV5TZUg2dA"
                     target="_blank"
                     rel="noopener noreferrer"
-                    >st. Vasilkovaya,<br />7A Kiev, 08132</a
                   >
+                    st. Vasilkovaya,<br />7A Kiev, 08132
+                  </a>
                 </li>
                 <li class="contact-list-item">
                   <a class="contact" href="barbershop@email.com">barbershop@email.com</a>
@@ -365,38 +377,24 @@
                 </li>
               </ul>
             </address>
-            <div class="up-block">
-              <svg class="line" width="60" height="0" style="outline: 1px solid #9da4bd">
-                <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
-              </svg>
-              <p class="hours-title">working hours</p>
-            </div>
-            <p class="contact">Every day from <time>09:00</time> to <time>22:00</time></p>
+            <p class="hours-title">working hours</p>
+            <p class="time">Every day from <time>09:00</time> to <time>22:00</time></p>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
     </div>
 
     <footer>
       <div class="container footer">
         <p class="copyright">&#xa9; Copyright 2020</p>
-        <div class="up-block-footer">
-          <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
-            <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
-          </svg>
-          <ul class="link-list">
-            <li class="list-item">
-              <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
-                >Instagram</a
-              >
-            </li>
-            <li class="list-item">
-              <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
-                >Youtube</a
-              >
-            </li>
-          </ul>
-        </div>
+        <ul class="link-list-footer">
+          <li class="list-item">
+            <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
+          </li>
+          <li class="list-item">
+            <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer">Youtube</a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
