--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -389,10 +389,14 @@
         <p class="copyright">&#xa9; Copyright 2020</p>
         <ul class="link-list-footer">
           <li class="list-item">
-            <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
+            <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
+              >Instagram</a
+            >
           </li>
           <li class="list-item">
-            <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer">Youtube</a>
+            <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
+              >Youtube</a
+            >
           </li>
         </ul>
       </div>
