--- a/index.html
+++ b/index.html
@@ -23,7 +23,24 @@
 
     <section>
       <div class="container hero">
-        <div class="bg-img"></div>
+        <div class="bg-img">
+          <div class="hero-content">
+            <p class="uppertitle-dark">A hair salon for men in Kyiv</p>
+            <h1 class="hero-title">BarberShop</h1>
+            <p class="hero-subtitle">
+              We are experts in trendy men’s haircuts.<br />
+              We work quickly, carefully and with style.
+            </p>
+          </div>
+          <ul class="list down-group">
+            <li class="list-item">
+              <button class="btn-slider back" type="button">Back</button>
+            </li>
+            <li class="list-item">
+              <button class="btn-slider forward" type="button">Forward</button>
+            </li>
+          </ul>
+        </div>
         <a class="" href="index.html">
           <svg class="logo">
             <use href="./image/icons.svg#icon-logo"></use>
@@ -32,14 +49,16 @@
         <header class="header">
           <nav class="">
             <ul class="nav">
-              <li class="list-item"><a class="header-link" href="">About</a></li>
-              <li class="list-item"><a class="header-link" href="">Services and prices</a></li>
-              <li class="list-item"><a class="header-link" href="">Barbers</a></li>
+              <li class="list-item"><a class="header-link" href="#about">About</a></li>
+              <li class="list-item">
+                <a class="header-link" href="#services">Services and prices</a>
+              </li>
+              <li class="list-item"><a class="header-link" href="#barbers">Barbers</a></li>
               <li class="list-item"><a class="header-link" href="#contacts">Contacts</a></li>
             </ul>
           </nav>
           <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
-          <button class="btn-light head" type="button">ONLINE-BOOKING</button>
+          <button class="btn-light head" type="button" data-modal-open>ONLINE-BOOKING</button>
         </header>
         <div class="left-group">
           <ul class="link-list left">
@@ -55,29 +74,11 @@
             </li>
           </ul>
         </div>
-        <div class="hero-content">
-          <p class="uppertitle-dark">A hair salon for men in Kyiv</p>
-          <h1 class="hero-title">BarberShop</h1>
-          <p class="hero-subtitle">
-            We are experts in trendy men’s haircuts.<br />
-            We work quickly, carefully and with style.
-          </p>
-        </div>
-        <div class="down-group">
-          <ul class="list">
-            <li class="list-item">
-              <button class="btn-slider back" type="button">Back</button>
-            </li>
-            <li class="list-item">
-              <button class="btn-slider forward" type="button">Forward</button>
-            </li>
-          </ul>
-        </div>
       </div>
     </section>
 
     <!-- About -->
-    <section class="section">
+    <section class="section" id="about">
       <div class="container cont-ab">
         <div class="about-photo">
           <ul class="list about">
@@ -97,14 +98,14 @@
             a team that is always "on the same wave" with clients. Therefore, we are always ready to
             improve everyone who comes to us!
           </p>
-          <button class="btn" type="button"><span class="about-btn">ONLINE-BOOKING</span></button>
+          <button class="btn" type="button" data-modal-open>ONLINE-BOOKING</button>
         </div>
       </div>
     </section>
 
     <!-- Services and prices -->
 
-    <div class="serv-img">
+    <div class="serv-img" id="services">
       <section class="section services-prices">
         <div class="container">
           <p class="uppertitle-dark">spend your time with the best masters</p>
@@ -140,7 +141,7 @@
               </li>
             </ul>
           </div>
-          <button class="btn-light" type="button">ONLINE-BOOKING</button>
+          <button class="btn-light" type="button" data-modal-open>ONLINE-BOOKING</button>
         </div>
       </section>
     </div>
@@ -198,7 +199,7 @@
     </section>
 
     <!-- Our barbers -->
-    <section class="our-barbers section">
+    <section class="our-barbers section" id="barbers">
       <div class="container">
         <p class="uppertitle">for true enjoyers of the atmosphere</p>
         <h2 class="title-dark">Our barbers</h2>
@@ -347,7 +348,7 @@
     </section>
 
     <!-- contacts -->
-    <div class="double-section">
+    <div class="double-section" id="contacts">
       <section>
         <div class="container">
           <div class="booking">
@@ -401,5 +402,17 @@
         </ul>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="close" data-modal-close>
+          <svg class="icon">
+            <use href="./image/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
