--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             a team that is always "on the same wave" with clients. Therefore, we are always ready to
             improve everyone who comes to us!
           </p>
-          <button class="btn" type="button" data-modal-open>ONLINE-BOOKING</button>
+          <button class="btn" type="button">ONLINE-BOOKING</button>
         </div>
       </div>
     </section>
@@ -141,7 +141,7 @@
               </li>
             </ul>
           </div>
-          <button class="btn-light" type="button" data-modal-open>ONLINE-BOOKING</button>
+          <button class="btn-light" type="button">ONLINE-BOOKING</button>
         </div>
       </section>
     </div>
