--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <section>
       <div class="container hero">
+        
         <div class="bg-img">
           <div class="hero-content">
             <p class="uppertitle-dark">A hair salon for men in Kyiv</p>
@@ -33,13 +34,16 @@
             </p>
           </div>
           <ul class="list down-group">
-            <li class="list-item">
-              <button class="btn-slider back" type="button">Back</button>
+            <li class="list-item-back">          
+              <img class="slide-two" src="./image/slider/slider3.jpg" alt="">
+              <button class="btn-slider back" type="button">Back</button>               
             </li>
-            <li class="list-item">
+            <li class="list-item-forvard">
+              <img class="slide-one" src="./image/slider/slider2.jpg" alt="">
               <button class="btn-slider forward" type="button">Forward</button>
             </li>
           </ul>
+         
         </div>
         <a class="" href="index.html">
           <svg class="logo">
