--- a/index.html
+++ b/index.html
@@ -397,14 +397,16 @@
                     <svg class="icon-contacts">
                       <use href="./image/icons.svg#icon-mail-footer"></use>
                     </svg>
-                    barbershop@email.com</a>
+                    barbershop@email.com
+                  </a>
                 </li>
                 <li class="contact-list-item">
                   <a class="contact" href="tel:+380961111111">
                     <svg class="icon-contacts">
                       <use href="./image/icons.svg#icon-phone-footer"></use>
                     </svg>
-                    +38 096 111 11 11</a>
+                    +38 096 111 11 11
+                  </a>
                 </li>
               </ul>
             </address>
